Alteon/Standalone/CloudFormation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "GELLicesneServerId": {
      "Description": "License Server ID",
      "Type": "String"
    },
    "GELActivationID": {
      "Description": "Activation ID",
      "Type": "String"
    },
    "GELType": {
      "Description": "Type",
      "Type": "String",
      "AllowedValues": ["deliver", "perform", "secure"]
    },
    "GELThroughput": {
      "Description": "Throughput",
      "Type": "Number",
      "AllowedValues": [25, 50, 100, 200, 500, 1000, 3000, 6000, 10000, 17000, 40000, 100000, 160000, 225000]
    },
    "VPCCidrBlock": {
      "Type": "String",
      "Description": "The /16 CIDR block for the VPC (Format Example: 10.0.0.0/16)",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.0\\.0/16",
      "ConstraintDescription": "Must be a valid IP CIDR block with a /16"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "vpc"] ] }}],
        "CidrBlock": { "Ref": "VPCCidrBlock" },
        "InstanceTenancy": "default",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true
      }
    },
    "VPCSn1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Mng_Subnet"] ] }}],
        "CidrBlock": { "Fn::Select": [0, { "Fn::Cidr": [{ "Fn::GetAtt": ["VPC", "CidrBlock"] }, 256, 8] } ] },
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] }
      },
      "DependsOn": "VPC"
    },
    "VPCSn2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "data_Subnet"] ] }}],
        "CidrBlock": { "Fn::Select": [1, {"Fn::Cidr": [{ "Fn::GetAtt": ["VPC", "CidrBlock"]}, 256, 8]}] },
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] }
      },
      "DependsOn": "VPC"
    },
    "VPCPubRt1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Mng_Route"] ] }}],
        "VpcId": { "Ref": "VPC" }
      },
      "DependsOn": "VPC"
    },
    "VPCPubRt2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Data_Subnet"] ] }}],
        "VpcId": { "Ref": "VPC" }
      },
      "DependsOn": "VPC"
    },
    "VPCSn1RtAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPubRt1" },
        "SubnetId": { "Ref": "VPCSn1" }
      },
      "DependsOn": "VPCPubRt1"
    },
    "VPCSn2RtAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "VPCPubRt2" },
        "SubnetId": { "Ref": "VPCSn2" }
      },
      "DependsOn": "VPCPubRt2"
    },
    "VPCDefaultRoute1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": { "Ref": "VPCPubRt1" },
        "GatewayId": { "Ref": "VPCIGW" }
      },
      "DependsOn": "VPCIGWAttachment"
    },
    "VPCDefaultRoute2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": { "Ref": "VPCPubRt2" },
        "GatewayId": { "Ref": "VPCIGW" }
      },
      "DependsOn": "VPCIGWAttachment"
    },
    "VPCIGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties" :{
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "IGW"] ] }}]
      },
      "DependsOn": "VPC"
    },
    "VPCIGWAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC"},
        "InternetGatewayId": { "Ref": "VPCIGW" }
      },
      "DependsOn": "VPCIGW"
    },
    "InstanceSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "SecGrp"] ] }}],
        "GroupDescription" : "Alteon Security Group",
        "VpcId" : {"Ref" : "VPC"},
        "SecurityGroupIngress" : [{
            "IpProtocol" : "tcp",
            "FromPort" : 443,
            "ToPort" : 443,
            "CidrIp" : "0.0.0.0/0"
         }, { 
            "IpProtocol" : "tcp",
            "FromPort" : 2222,
            "ToPort" : 2222,
            "CidrIp" : "0.0.0.0/0"
         }, { 
            "IpProtocol" : "icmp",
            "FromPort" : 1,
            "ToPort" : 1,
            "CidrIp" : "0.0.0.0/0"
         }, { 
            "IpProtocol" : "udp",
            "FromPort" : 2090,
            "ToPort" : 2090,
            "CidrIp" : "0.0.0.0/0"
         }, { 
            "IpProtocol" : "tcp",
            "FromPort" : 3121,
            "ToPort" : 3121,
            "CidrIp" : "0.0.0.0/0"
         }
       ]
      },
      "DependsOn": "VPC"
    },
    "MgmtEip": {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      },
      "DependsOn": "VPC"
    },
    "AssociateMgmtPort" : {
      "Type" : "AWS::EC2::EIPAssociation",
      "Properties" : {
        "AllocationId" : { "Fn::GetAtt" : [ "MgmtEip", "AllocationId" ]},
        "NetworkInterfaceId" : { "Ref" : "MgmtXface" }
      },
      "DependsOn": ["MgmtEip", "MgmtXface"]
    },
    "DataEip": {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      },
      "DependsOn": "VPC"
    },
    "AssociateDataPort" : {
      "Type" : "AWS::EC2::EIPAssociation",
      "Properties" : {
        "AllocationId": { "Fn::GetAtt" : [ "DataEip", "AllocationId" ]},
        "PrivateIpAddress": { "Fn::Select" : [0, { "Fn::GetAtt" : ["DataXface", "SecondaryPrivateIpAddresses" ]}]},
        "NetworkInterfaceId" : { "Ref" : "DataXface" }
      },
      "DependsOn": ["DataEip", "DataXface"]
    },
    "MgmtXface" : {
      "Type" : "AWS::EC2::NetworkInterface",
      "Properties" : {
        "SubnetId" : { "Ref" : "VPCSn1" },
        "Description" :"Interface for control traffic",
        "GroupSet" : [ {"Ref" : "InstanceSecurityGroup"} ],
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Mng_Nic"] ] }}],
      },
      "DependsOn": ["VPCSn1", "VPCSn2", "InstanceSecurityGroup"]
    },
   "DataXface" : {
      "Type" : "AWS::EC2::NetworkInterface",
      "Properties" : {
        "SubnetId" : { "Ref" : "VPCSn2" },
        "Description" :"Interface for web traffic",
        "GroupSet" : [ {"Ref" : "InstanceSecurityGroup"} ],
        "SecondaryPrivateIpAddressCount" : 1,
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Data_Nic"] ] }}],
      },
      "DependsOn": ["VPCSn1", "VPCSn2", "InstanceSecurityGroup"]
    },
    "Alteon": {
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Join": ["_", [{ "Ref": "AWS::StackName" }, "Instance"] ] }}],
        "ImageId": "ami-020bc27523e9c64a6",
        "InstanceType": "m3.medium",
        "NetworkInterfaces" : [{ 
            "NetworkInterfaceId" : {"Ref" : "MgmtXface"},
            "DeviceIndex" : "0" 
        }, { 
            "NetworkInterfaceId" : {"Ref" : "DataXface"},
            "DeviceIndex" : "1" 
        }],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": ["", [
                "#!/bin/bash\n",
                "cd /var/tmp\n",
                "echo \"Throughput = ", { "Ref": "GELThroughput"}, "\" >> gel.cfg\n",
                "echo \"Type = ", {"Ref": "GELType"}, "\" >> gel.cfg\n",
                "echo \"LicenseServerId = ", { "Ref": "GELLicesneServerId" }, "\" >> gel.cfg\n",
                "echo \"ActivationId = ", { "Ref": "GELActivationID" }, "\" >> gel.cfg\n"
              ]]
          }
        }
      },
      "Type": "AWS::EC2::Instance",
      "DependsOn": ["MgmtXface", "DataXface"]
    }
  }
}
